--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.9",
     "sass": "^1.72.0",
+    "solid-js": "^1.8.16",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3"
   }
