--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
-    "@astrojs/solid-js": "^4.0.1",
+    "@astrojs/react": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "astro": "^4.5.9",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.72.0",
-    "solid-js": "^1.8.16",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3"
   }
